slurm-1899585.out
perl: warning: Setting locale failed.
perl: warning: Please check that your locale settings:
	LANGUAGE = (unset),
	LC_ALL = (unset),
	LC_CTYPE = "UTF-8",
	LANG = "en_ZA.utf-8"
    are supported and installed on your system.
perl: warning: Falling back to the standard locale ("C").
/var/tmp/slurmd.spool/job1899585/slurm_script: line 8: nvcc: command not found
Loading python/miniconda3-py38-usr-A
  Loading requirement: compilers/gcc820 mpi/openmpi-4.0.1
Traceback (most recent call last):
  File "runAGCRN.py", line 2, in <module>
    import Logs.Evaluation as Evaluation
  File "/home/gbxade002/WEATHER-FLOW/Logs/Evaluation.py", line 5, in <module>
    import Utils.gwnUtils as utils
  File "/home/gbxade002/WEATHER-FLOW/Utils/gwnUtils.py", line 87
    def inverse_transform(self, data)
                                    ^
SyntaxError: invalid syntax
